test/pass/atom_string.j
class A {
    Void main() { return i + i + "a"; }
}
