test/fail/lexing_error_invalid_decimal_escape_string.j
class A {
  Void main() { return "\256"; }
}
